Mobile layout improved, copyright year updated and made links use / Also added nice animation in contact

--- a/contact.html
+++ b/contact.html
@@ -14,20 +14,23 @@
 
 		<header>
 			<nav>
-
-				<a href="index.html">
+				<a href="/">
 					<h2>Kulexar</h2>
 					<p>Your Compliance and Business Winning Experts</p>
 				</a>
 
-				<ul>
-					<li><a href="about.html">Contact</a></li>
-					<li><a href="services.html">Services</a></li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
+				<ul id="nav">
+					<a href="#" class="nav-close">
+						<i class="fa-solid fa-xmark"></i>
+					</a>
+
+					<li><a href="/about">About</a></li>
+					<li><a href="/services">Services</a></li>
+					<li><a href="/contact">Contact</a></li>
+					<li><a href="/gallery">Gallery</a></li>
 				</ul>
 
-				<a class="nav-open">
+				<a href="#nav" class="nav-open">
 					<i class="fa-solid fa-bars"></i>
 				</a>
 
@@ -47,18 +50,18 @@
 			<h2 class="underline">Contact Us</h2>
 
 			<form>
-				<label for="name">Your Name</label><br>
-				<input id="name" type="text"/><br>
+				<label for="name">Your Name</label>
+				<input placeholder="" id="name" type="text"/><br>
 				<br>
-				<label for="email">Your Email</label><br>
-				<input id="email" type="email"/><br>
+				<label for="email">Your Email</label>
+				<input placeholder="" id="email" type="email"/><br>
 				<br>
-				<label for="subject">Subject</label><br>
-				<input id="subject" type="text"/><br>
+				<label for="subject">Subject</label>
+				<input placeholder="" id="subject" type="text"/><br>
 				<br>
 				<label for="message">Your Message</label><br>
-				<textarea maxlength="400" rows="5" cols="40" id="message"></textarea><br>
-				<br>
+				<textarea placeholder="" maxlength="400" rows="5" cols="40" id="message"></textarea><br>
+
 				<input type="submit" value="Submit">
 			</form>
 			<br>
@@ -74,7 +77,7 @@
 				<a target="_blank" href="mailto:info@kulexar.com" class="socials fa-solid fa-envelope"></a>
 			</div>
 
-			<p>&copy; Kulexar Consulting Ltd 2024. All rights and reserved.</p>
+			<p>&copy; Kulexar Consulting Ltd 2025. All rights and reserved.</p>
 		</footer>
 	</body>
 </html>
