--- a/gallery.html
+++ b/gallery.html
@@ -14,20 +14,23 @@
 
 		<header>
 			<nav>
-
-				<a href="index.html">
+				<a href="/">
 					<h2>Kulexar</h2>
 					<p>Your Compliance and Business Winning Experts</p>
 				</a>
 
-				<ul>
-					<li><a href="about.html">About</a></li>
-					<li><a href="services.html">Services</a></li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
+				<ul id="nav">
+					<a href="#" class="nav-close">
+						<i class="fa-solid fa-xmark"></i>
+					</a>
+
+					<li><a href="/about">About</a></li>
+					<li><a href="/services">Services</a></li>
+					<li><a href="/contact">Contact</a></li>
+					<li><a href="/gallery">Gallery</a></li>
 				</ul>
 
-				<a class="nav-open">
+				<a href="#nav" class="nav-open">
 					<i class="fa-solid fa-bars"></i>
 				</a>
 
@@ -67,8 +70,7 @@
 			<a href="https://www.linkedin.com/posts/kulexar-consulting_helpful-fire-safety-guide-activity-7167988128647897088-XoDv"><i class="post fa-brands fa-linkedin-in"></i></a>
 			<hr>
 		</section>
-
-		<section>
+<section>
 			<a class="link" href="https://www.rockwool.com/group/advice-and-inspiration/blog/what-makes-a-building-sustainable/">
 				<img src="img/gallery-fire-sustainability.jpg">
 				<br>
@@ -110,7 +112,7 @@
 				<a target="_blank" href="mailto:info@kulexar.com" class="socials fa-solid fa-envelope"></a>
 			</div>
 
-			<p>&copy; Kulexar Consulting Ltd 2024. All rights and reserved.</p>
+			<p>&copy; Kulexar Consulting Ltd 2025. All rights and reserved.</p>
 		</footer>
 	</body>
 </html>
