--- a/services/passive-fire-protection.html
+++ b/services/passive-fire-protection.html
@@ -13,20 +13,23 @@
 
 		<header>
 			<nav>
-
-				<a href="../index.html">
+				<a href="/">
 					<h2>Kulexar</h2>
 					<p>Your Compliance and Business Winning Experts</p>
 				</a>
 
-				<ul>
-					<li><a href="../about.html">About</a></li>
-					<li><a href="../services.html">Services</a></li>
-					<li><a href="../contact.html">Contact</a></li>
-					<li><a href="../gallery.html">Gallery</a></li>
+				<ul id="nav">
+					<a href="#" class="nav-close">
+						<i class="fa-solid fa-xmark"></i>
+					</a>
+
+					<li><a href="/about">About</a></li>
+					<li><a href="/services">Services</a></li>
+					<li><a href="/contact">Contact</a></li>
+					<li><a href="/gallery">Gallery</a></li>
 				</ul>
 
-				<a class="nav-open">
+				<a href="#nav" class="nav-open">
 					<i class="fa-solid fa-bars"></i>
 				</a>
 
@@ -71,7 +74,7 @@
 				<a target="_blank" href="mailto:info@kulexar.com" class="socials fa-solid fa-envelope"></a>
 			</div>
 
-			<p>&copy; Kulexar Consulting Ltd 2024. All rights and reserved.</p>
+			<p>&copy; Kulexar Consulting Ltd 2025. All rights and reserved.</p>
 		</footer>
 	</body>
 </html>
