squash! Mobile layout improved, copyright year updated and made links use / Also added nice animation in contact

--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,7 @@
 				<label for="subject">Subject</label>
 				<input placeholder="" id="subject" type="text"/><br>
 				<br>
-				<label for="message">Your Message</label><br>
-				<textarea placeholder="" maxlength="400" rows="5" cols="40" id="message"></textarea><br>
+				<textarea placeholder="Your Message" maxlength="400" rows="5" cols="40" id="message"></textarea><br>
 
 				<input type="submit" value="Submit">
 			</form>
