--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
 				Video not supported.
 			</video>
 
-			<a class="link" href="https://uk.linkedin.com/company/kulexar-consulting">Passive Fire Protection Summary</a>
+			<a class="link" target="_blank" href="https://uk.linkedin.com/company/kulexar-consulting">Passive Fire Protection Summary</a>
 			<br>
 			10/02/2024
 			<a href="https://www.linkedin.com/posts/kulexar-consulting_passivefireprotection-firesafety-firedoors-activity-7148808568689872896-VaXD"><i class="post fa-brands fa-linkedin-in"></i></a>
@@ -60,7 +60,7 @@
 		</section>
 
 		<section>
-			<a class="link" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1147631/A_guide_to_making_your_small_block_of_flats_safe_from_fire.pdf">
+			<a class="link" target="_blank" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1147631/A_guide_to_making_your_small_block_of_flats_safe_from_fire.pdf">
 				<img src="img/gallery-small-block-of-flats-thumbnail.png">
 				<br>
 				A guide to making your small block of flats safe from fire
@@ -71,7 +71,7 @@
 			<hr>
 		</section>
 <section>
-			<a class="link" href="https://www.rockwool.com/group/advice-and-inspiration/blog/what-makes-a-building-sustainable/">
+			<a class="link" target="_blank" href="https://www.rockwool.com/group/advice-and-inspiration/blog/what-makes-a-building-sustainable/">
 				<img src="img/gallery-fire-sustainability.jpg">
 				<br>
 				The interesting relationship between fire safety and sustainability
@@ -83,7 +83,7 @@
 		</section>
 
 		<section>
-			<a class="link" href="services.html">
+			<a class="link" target="_blank" href="services.html">
 				<img src="img/gallery-pfp-services.png">
 				<br>
 				Passive Fire Protection Services
@@ -95,7 +95,7 @@
 		</section>
 
 		<section>
-			<a class="link" href="services.html">
+			<a class="link" target="_blank" href="services.html">
 				<img src="img/gallery-fire-stopping-services.png">
 				<br>
 				Fire Stopping Services
